plugins {
    id 'byteback.java-common-conventions'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8

    compileJava {
        options.debug = true
    }
}

dependencies {
    implementation project(':byteback-specification')
}
